--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Deploy using SSH 
       uses: appleboy/ssh-action@master
       with:
-        host: ${{ secrets.HOST}}
+        host: ${{ secrets.192.168.49.1}}
         username: ${{ secrets.USERNAME}}
         key: ${{ secrets.SSH_PRIVATE_KEY}}
         port: 22
